[tool.poetry]
name = "genai"
version = "0.1.0"
description = ""
authors = ["yuuki <yuki.tsubo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.3"
langchain = "^0.0.131"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
